--- a/config/database.yml
+++ b/config/database.yml
@@ -10,12 +10,13 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: db/development.sqlite3
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+  primary:
+    <<: *default
+    database: db/development.sqlite3
+  primary_marco:
+    <<: *default
+    database: db/development_marco.sqlite3
+    migrations_paths: db/tenants_migrations
 test:
   <<: *default
   database: db/test.sqlite3
