--- a/config/database.yml
+++ b/config/database.yml
@@ -5,22 +5,28 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
+  min_messages: warning
+  username: postgres
+  password: postgres
+  host: localhost
+  port: 5433
 
 development:
   primary:
     <<: *default
-    database: db/development.sqlite3
+    database: multitenancy_rails_development
+
   primary_marco:
     <<: *default
-    database: db/development_marco.sqlite3
-    migrations_paths: db/tenants_migrations
+    database: multitenancy_rails_marco_development
+
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: multitenancy_rails_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: multitenancy_rails_production
